# metal_sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  metal_sandbox.sublime-project
MetalSandbox/: AppDelegate.h  AppDelegate.m  GameViewController.m  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  main.m
MetalSandbox.xcodeproj/: project.pbxproj
MetalSandbox.xcodeproj/xcuserdata/buzzy.xcuserdatad/xcschemes/: xcschememanagement.plist
MetalSandboxTests/: MetalSandboxTests.m
MetalSandboxUITests/: MetalSandboxUITests.m  MetalSandboxUITestsLaunchTests.m
src/: CMakeLists.txt  GameViewController.h  Renderer.h  ShaderTypes.h  Shaders.metal  main.mm  metal.cc
src/Base.lproj/: Main.storyboard
tools/: merge_compilation_commands.py
tools/cmake/: metal_library.cmake
